--- a/index.html
+++ b/index.html
@@ -4,8 +4,303 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Podcast</title>
+    <link rel="stylesheet" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
-<body>
+<body class="bg-light">
     
+    <div class="container media bg-white my-5 p-3 d-flex">
+        <!-- -------------------------------------------------left part-------------------------------------- -->
+        <div class="col-lg-2 col-md-12 col-sm-12 text-secondary">
+            <p class="fw-bold fs-5"><i class="fa-sharp fa-solid fa-earth-africa fa-2x" style="color: rgb(88, 88, 250);"></i> Podcastr</p>
+            <div class="row my-3">
+                <p class="ms-1 fw-lighter">Lorem</p>
+                <div class="text-primary fw-bold d-flex gap-3 align-items-center bordure p-1">
+                    <div><i class="fa-brands fa-discord py-2"></i></div>
+                    <div>Discover</div>
+                </div>
+                <div class="d-flex gap-3 align-items-center p-1">
+                    <div><i class="fa fa-cloud py-2"></i></div>
+                    <div>Trending</div>
+                </div>
+                <div class="d-flex gap-3 align-items-center p-1">
+                    <div><i class="fa fa-star py-2"></i></div>
+                    <div>Oscars</div>
+                </div>
+                <div class="d-flex gap-3 align-items-center p-1">
+                    <div><i class="fa fa-cloud py-2"></i></div>
+                    <div>Album</div>
+                </div>
+                <div class="d-flex gap-3 align-items-center p-1">
+                    <div><i class="fa fa-sun"></i></div>
+                    <div>Speaker</div>
+                </div>
+            </div>
+
+            <div class="row my-3">
+                <p class="ms-1 fw-lighter">Lorem</p>
+                <div class="d-flex gap-3 align-items-center p-1">
+                    <div><i class="fa fa-star py-2"></i></div>
+                    <div>Recent</div>
+                </div>
+                <div class="d-flex gap-3 align-items-center p-1">
+                    <div><i class="fa fa-cloud py-2"></i></div>
+                    <div>Playlists</div>
+                </div>
+                <div class="d-flex gap-3 align-items-center p-1">
+                    <div><i class="fa fa-sun py-2"></i></div>
+                    <div>Favourites</div>
+                </div>
+                <div class="d-flex gap-3 align-items-center p-1">
+                    <div><i class="fa fa-moon py-2"></i></div>
+                    <div>Local</div>
+                </div>
+            </div>
+
+            <div class="row my-3">
+                <p class="ms-1 fw-lighter">Lorem</p>
+                <div class="d-flex gap-3 align-items-center p-1">
+                    <div><i class="fa fa-star py-2"></i></div>
+                    <div>New Playlist</div>
+                </div>
+                <div class="d-flex gap-3 align-items-center p-1">
+                    <div><i class="fa fa-search py-2"></i></div>
+                    <div>Import Playlist</div>
+                </div>
+                <div class="d-flex gap-3 align-items-center p-1">
+                    <div><i class="fa fa-cloud py-2"></i></div>
+                    <div>Account</div>
+                </div>
+                <div class="d-flex gap-3 align-items-center p-1">
+                    <div><i class="fa fa-cart-shopping py-2"></i></div>
+                    <div>Settings</div>
+                </div>
+            </div>
+
+            <div class="d-flex align-items-center gap-2">
+                <div class="off">
+                    <div class="offe"></div>
+                </div>
+                <div>light</div>
+            </div>
+        </div>
+        <!-- ----------------------------------------------------fin left part---------------------------------------- -->
+
+        <!-- ------------------------------------------------------midlle part------------------------------------------- -->
+        <div class="col-lg-7 col-sm-12 col-md-12 px-5">
+            <div class="rowe-flex d-flex gap-3">
+                <div>
+                    <p class="fw-bold">New Releases</p>
+                </div>
+                <div>
+                    <p class="fw-bold">Something Play</p>
+                </div>
+                <div>
+                    <p class="fw-bold">Live Podcasts <i class="fa fa-play" style="color: rgb(91, 91, 255);"></i></p>
+                </div>
+            </div>
+            <div class="div mt-4 ">
+                <p class="fw-bold">TRENDING PODCASTS</p>
+                <div class="card carde rounded-4 shadow">
+                    <div class="p-5">
+                        <p class="fw-bold text-light fs-1 line-height">On Purpose</p>
+                        <p class="fw-bold text-light fs-5 ">with Jay Shetty</p>
+                        <div class="text-light d-flex gap-3">
+                            <p><i class="fa fa-play" style="color: rgb(91, 91, 255);"></i> Lorem Play</p>
+                            <p> <i class="fa fa-headphones" style="color: rgb(91, 91, 255);"></i> 1M currently listening</p>
+                        </div>
+                        <div>
+                            <input type="button" value="Listen Now" class="btn btn-primary rounded-5 mb-2">
+                            <input type="button" value="Add to favourites" class="btn border-light rounded-5 text-light mb-2">
+                        </div>
+                    </div>
+                </div>
+                <div class=" bas mt-3 ">
+                    <div class="trait"></div>
+                    <div class="point"></div>
+                    <div class="point"></div>
+                    <div class="point"></div>
+                    <div class="point"></div>
+                    <div class="point"></div>
+                </div>
+            </div>
+            <div>
+                <div class="row mt-3">
+                    <p class="fw-bold">RECENTLY PLAYED</p>
+                    <div class="row">
+                        <div class="col">
+                            <img src="./img/team2.jpg" alt="" class="img-fluid rounded-3">
+                            <div>
+                                <p class="pod">Elevation</p>
+                                <p class="line-height">lorem</p>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <img src="/img/team1.jpg" alt="" class="img-fluid rounded-3">
+                            <div>
+                                <p class="pod">The Gary</p>
+                                <p class="line-height">lorem</p>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <img src="/img/team2.jpg" alt="" class="img-fluid rounded-3">
+                            <div>
+                                <p class="pod">Daily</p>
+                                <p class="line-height">lorem</p>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <img src="/img/team3.jpg" alt="" class="img-fluid rounded-3">
+                            <div>
+                                <p class="pod">Daily Podcast</p>
+                                <p class="line-height">lorem</p>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <img src="/img/team1.jpg" alt="" class="img-fluid rounded-3">
+                            <div>
+                                <p class="pod">The Mindset..</p>
+                                <p class="line-height">lorem</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <p class="fw-bold">MOST POPULAR</p>
+                    <div class="col-lg-6 col-md-12 col-sm-12">
+                        <div class="d-flex align-items-center gap-2 mb-2 border rounded">
+                            <img src="./img/style3.webp" alt="img" class="img-fluid rounded-2 w-25">
+                            <p class="pod">The battle belongs to... <br> <span class="fw-light">Joyce Player</span></p>
+                            <i class="fa fa-play" style="color: rgb(91, 91, 255);"></i>
+                        </div>
+                        <div class="d-flex align-items-center gap-2 mb-2 border rounded">
+                            <img src="./img/style2.jpg" alt="img" class="img-fluid rounded-2 w-25">
+                            <p class="pod">Are we ready to buy... <br> <span class="fw-light">Joyce Player</span></p>
+                            <i class="fa fa-play" style="color: rgb(91, 91, 255);"></i>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-6 col-md-12 col-sm-12">
+                        <div class="d-flex align-items-center gap-2 mb-2 border rounded">
+                            <img src="./img/style2.jpg" alt="img" class="img-fluid rounded-2 w-25">
+                            <p class="pod">Monday morning pod... <br> <span class="fw-light">Joyce Player</span></p>
+                            <i class="fa fa-play" style="color: rgb(91, 91, 255);"></i>
+                        </div>
+                        <div class="d-flex align-items-center gap-2 mb-2 border rounded">
+                            <img src="./img/style3.webp" alt="img" class="img-fluid rounded-2 w-25">
+                            <p class="pod">How to punp yoursel... <br> <span class="fw-light">Joyce Player</span></p>
+                            <i class="fa fa-play" style="color: rgb(91, 91, 255);"></i>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        
+        <!-- -------------------------------------------------right part------------------------------------------------------- -->
+        <div class="col-lg-3 col-md-12 col-sm-12">
+            <div class="d-flex justify-content-evenly">
+                <div>
+                    <p class="pod">UPGRADE PLAN</p>
+                </div>
+                <div>
+                    <i class="fa fa-bell"></i>
+                </div>
+                <div class="">
+                    <img src="./img/style1.webp" alt="img" class="img-fluid ptit rounded-5">
+                </div>
+                <div>
+                    <p class="fw-bold">Alberto <br> <span class="text-primary fw-light">Auflix</span></p>
+                </div>
+            </div>
+            <div class="mt-4">
+                <p class="fw-bold">QUICK SEARCH</p>
+                <div class="icone col-12">
+                    <input type="search" id="" class="search rounded-2 bg-white border p-2" placeholder="Tape here to search ">
+                    <span class="bg-primary p-2 rounded-5"><i class="fa fa-search" style="color: #fff;"></i></span>
+                </div>
+                <p class="fw-bold mt-4">TOP PODCASTERS</p>
+                <div class="d-flex">
+                    <div class="col-3">
+                        <img src="./img/style4.jpg" alt="img" class="img-fluid rounded-5 w-75 h-75">
+                    </div>
+                    <div class="col-5">
+                        <p class="pod">Joe Rogan</p>
+                        <p class="text-muted">35412 followers</p>
+                    </div>
+                    <div class="col-3 text-center">
+                        <p class="p-2 text-primary follow fw-bold rounded-3">follow</p>
+                    </div>
+                </div>
+
+                <div class="d-flex">
+                    <div class="col-3">
+                        <img src="./img/style4.jpg" alt="img" class="img-fluid rounded-5 w-75 h-75">
+                    </div>
+                    <div class="col-5">
+                        <p class="pod">Andrew Klavan</p>
+                        <p class="text-muted">3325412 followers</p>
+                    </div>
+                    <div class="col-3 text-center">
+                        <p class="p-2 text-primary follow fw-bold rounded-3">follow</p>
+                    </div>
+                </div>
+
+                <div class="d-flex">
+                    <div class="col-3">
+                        <img src="./img/style4.jpg" alt="img" class="img-fluid rounded-5 w-75 h-75">
+                    </div>
+                    <div class="col-5">
+                        <p class="pod">Joyce Meyer</p>
+                        <p class="text-muted">3265412 followers</p>
+                    </div>
+                    <div class="col-3 text-center">
+                        <p class="btn btn-primary fw-bold rounded-3">follow</p>
+                    </div>
+                </div>
+
+                <div class="card mt-4">
+                    <div class="card-body bg-dark text-light rounded ">
+                        <div class="d-flex justify-content-between">
+                            <p>Player</p>
+                            <i class="fa fa-lock"></i>
+                        </div>
+                        <div class="text-center">
+                            <img src="./img/Jumelle.jpg" alt="img" class="img-fluid w-25 rounded-5">
+                            <p class="fw-semibold mt-3">Employee Transfert</p>
+                            <p class="text-secondary">Something is written here</p>
+                            <div class="d-flex align-items-center">
+                                <p class="text-secondary p">09:25</p>
+                                <div class="prgs">
+                                    <div class="prgss">
+                                        <span class="prg"></span>
+                                    </div>
+                                </div>
+                                <p class="text-secondary p">45:29</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card-caption bg-primary text-light rounded">
+                        <div class="d-flex justify-content-evenly align-items-center my-3">
+                            <div><i class="fa fa-play"></i></div>
+                            <div><i class="fa fa-play"></i></div>
+                            <div>
+                                <div class="bg-light px-2 rounded-5 py-2 ">
+                                    <i class="fa fa-play text-primary"></i>
+                                </div>
+                            </div>
+                            <div><i class="fa fa-play"></i></div>
+                            <div><i class="fa fa-play"></i></div>
+                        </div>
+                        <div class="text-center ">
+                           <p class="p">Lorem</p> 
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
