--- a/index.html
+++ b/index.html
@@ -137,28 +137,28 @@
                             </div>
                         </div>
                         <div class="col">
-                            <img src="/img/team1.jpg" alt="" class="img-fluid rounded-3">
+                            <img src="./img/team1.jpg" alt="" class="img-fluid rounded-3">
                             <div>
                                 <p class="pod">The Gary</p>
                                 <p class="line-height">lorem</p>
                             </div>
                         </div>
                         <div class="col">
-                            <img src="/img/team2.jpg" alt="" class="img-fluid rounded-3">
+                            <img src="./img/team2.jpg" alt="" class="img-fluid rounded-3">
                             <div>
                                 <p class="pod">Daily</p>
                                 <p class="line-height">lorem</p>
                             </div>
                         </div>
                         <div class="col">
-                            <img src="/img/team3.jpg" alt="" class="img-fluid rounded-3">
+                            <img src="./img/team3.jpg" alt="" class="img-fluid rounded-3">
                             <div>
                                 <p class="pod">Daily Podcast</p>
                                 <p class="line-height">lorem</p>
                             </div>
                         </div>
                         <div class="col">
-                            <img src="/img/team1.jpg" alt="" class="img-fluid rounded-3">
+                            <img src="./img/team1.jpg" alt="" class="img-fluid rounded-3">
                             <div>
                                 <p class="pod">The Mindset..</p>
                                 <p class="line-height">lorem</p>
