--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <p class="fw-bold fs-5"><i class="fa-sharp fa-solid fa-earth-africa fa-2x" style="color: rgb(88, 88, 250);"></i> Podcastr</p>
             <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
-              <button class="navbar-toggler text-end" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
               <div class="collapse navbar-collapse" id="navbarNav">
@@ -121,54 +121,59 @@
                     <p class="fw-bold">Live Podcasts <i class="fa fa-play" style="color: rgb(91, 91, 255);"></i></p>
                 </div>
             </div>
-            <div class="div mt-4 ">
-                <!-- <p class="fw-bold">TRENDING PODCASTS</p>
-                <div class="card carde rounded-4 shadow">
-                    <div class="p-5">
-                        <p class="fw-bold text-light fs-1 line-height">On Purpose</p>
-                        <p class="fw-bold text-light fs-5 ">with Jay Shetty</p>
-                        <div class="text-light d-flex gap-3">
-                            <p><i class="fa fa-play" style="color: rgb(91, 91, 255);"></i> Lorem Play</p>
-                            <p> <i class="fa fa-headphones" style="color: rgb(91, 91, 255);"></i> 1M currently listening</p>
-                        </div>
-                        <div>
-                            <input type="button" value="Listen Now" class="btn btn-primary rounded-5 mb-2">
-                            <input type="button" value="Add to favourites" class="btn border-light rounded-5 text-light mb-2">
-                        </div>
-                    </div>
-                </div>
-                <div class=" bas mt-3 ">
-                    <div class="trait"></div>
-                    <div class="point"></div>
-                    <div class="point"></div>
-                    <div class="point"></div>
-                    <div class="point"></div>
-                    <div class="point"></div>
-                </div> -->
+            <div class="div mt-4">
                 <p class="fw-bold">TRENDING PODCASTS</p>
                 <div id="carouselExampleCaptions" class="carousel slide">
-                    
+                    <!-- <div class="carousel-indicators">
+                        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                    </div> -->
                     <div class="carousel-inner">
-                      <div class="carousel-item active position-relative cr">
+                      <div class="carousel-item active">
                         <img src="./img/bg-image.jpg" class=" w-100 img-fluid rounded" alt="...">
-                        <div class=" position-absolute top-50 start-50 translate-middle crs">
-                            <p class="fw-bold text-light fs-1">On Purpose</p>
-                            <p class="fw-bold text-light fs-5 ">with Jay Shetty</p>
-                            <div class="text-light d-flex gap-3">
-                                <p><i class="fa fa-play" style="color: rgb(91, 91, 255);"></i> Lorem Play</p>
-                                <p> <i class="fa fa-headphones" style="color: rgb(91, 91, 255);"></i> 1M currently listening</p>
+                        <div class="carousel-caption text-start">
+                            <p class="fw-bold text-light lh-1 purpose">On Purpose</p>
+                            <p class="fw-bold text-light jay lh-1 ">with Jay Shetty</p>
+                            <div class="text-light d-flex gape">
+                                <p class="lorem-play"><i class="fa fa-play" style="color: rgb(91, 91, 255);"></i> Lorem Play</p>
+                                <p class="m"><i class="fa fa-headphones" style="color: rgb(91, 91, 255);"></i> 1M currently listening</p>
                             </div>
-                            <div>
-                                <input type="button" value="Listen Now" class="btn btn-primary rounded-5 mb-2">
+                            <div class="carsl">
+                                <input type="button" value="Listen now" class="btn btn-primary now rounded-5 mb-2">
                                 <input type="button" value="Add to favourites" class="btn border-light rounded-5 text-light mb-2">
                             </div>
                         </div>
                       </div>
                       <div class="carousel-item">
-                        <img src="./img/bg-image.jpg" class="d-block w-100  img-fluid" alt="...">
+                        <img src="./img/bg-image.jpg" class="d-block w-100 img-fluid" alt="...">
+                        <div class="carousel-caption text-start">
+                            <p class="fw-bold text-light lh-1 purpose">On Purpose</p>
+                            <p class="fw-bold text-light jay lh-1 ">with Jay Shetty</p>
+                            <div class="text-light d-flex gape">
+                                <p class="lorem-play"><i class="fa fa-play" style="color: rgb(91, 91, 255);"></i> Lorem Play</p>
+                                <p class="m"><i class="fa fa-headphones" style="color: rgb(91, 91, 255);"></i> 1M currently listening</p>
+                            </div>
+                            <div class="carsl">
+                                <input type="button" value="Listen now" class="btn btn-primary now rounded-5 mb-2">
+                                <input type="button" value="Add to favourites" class="btn border-light rounded-5 text-light mb-2">
+                            </div>
+                        </div>
                       </div>
                       <div class="carousel-item">
                         <img src="./img/bg-image.jpg" class="d-block w-100 img-fluid rounded" alt="...">
+                        <div class="carousel-caption text-start">
+                            <p class="fw-bold text-light lh-1 purpose">On Purpose</p>
+                            <p class="fw-bold text-light jay lh-1 ">with Jay Shetty</p>
+                            <div class="text-light d-flex gape">
+                                <p class="lorem-play"><i class="fa fa-play" style="color: rgb(91, 91, 255);"></i> Lorem Play</p>
+                                <p class="m"><i class="fa fa-headphones" style="color: rgb(91, 91, 255);"></i> 1M currently listening</p>
+                            </div>
+                            <div class="carsl">
+                                <input type="button" value="Listen now" class="btn btn-primary now rounded-5 mb-2">
+                                <input type="button" value="Add to favourites" class="btn border-light rounded-5 text-light mb-2">
+                            </div>
+                        </div>
                       </div>
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
@@ -222,15 +227,15 @@
                         </div>
                     </div>
                 </div>
-                <div class="d-flex flex-column">
+                <div class="d-flex flex-column mt-2">
                     <p class="fw-bold">MOST POPULAR</p>
                     <div class="col-12 d-flex media gap-4">
-                        <div class="d-flex align-items-center gap-2 mb-2 border rounded col">
+                        <div class="d-flex align-items-center justify-content-between mb-2 border rounded col">
                             <img src="./img/style3.webp" alt="img" class="img-fluid rounded-2 w-25">
                             <p class="pod">The battle belongs to... <br> <span class="fw-light">Joyce Player</span></p>
                             <i class="fa fa-play" style="color: rgb(91, 91, 255);"></i>
                         </div>
-                        <div class="d-flex align-items-center gap-2 mb-2 border rounded col">
+                        <div class="d-flex align-items-center justify-content-between mb-2 border rounded col">
                             <img src="./img/style2.jpg" alt="img" class="img-fluid rounded-2 w-25">
                             <p class="pod">Are we ready to buy... <br> <span class="fw-light">Joyce Player</span></p>
                             <i class="fa fa-play" style="color: rgb(91, 91, 255);"></i>
@@ -238,12 +243,12 @@
                     </div>
 
                     <div class="col-12 d-flex media gap-4">
-                        <div class="d-flex align-items-center gap-2 mb-2 border rounded col">
+                        <div class="d-flex align-items-center justify-content-between mb-2 border rounded col">
                             <img src="./img/style2.jpg" alt="img" class="img-fluid rounded-2 w-25">
                             <p class="pod">Monday morning pod... <br> <span class="fw-light">Joyce Player</span></p>
                             <i class="fa fa-play" style="color: rgb(91, 91, 255);"></i>
                         </div>
-                        <div class="d-flex align-items-center gap-2 mb-2 border rounded col">
+                        <div class="d-flex align-items-center justify-content-between mb-2 border rounded col">
                             <img src="./img/style3.webp" alt="img" class="img-fluid rounded-2 w-25">
                             <p class="pod">How to punp yoursel... <br> <span class="fw-light">Joyce Player</span></p>
                             <i class="fa fa-play" style="color: rgb(91, 91, 255);"></i>
@@ -263,12 +268,12 @@
             </div>
             <div class="searc">
                 <p class="fw-bold">QUICK SEARCH</p>
-                <div class="icone col-12">
+                <form action="#" class="icone col-12">
                     <input type="search" id="" class="search rounded-2 bg-white border p-2" placeholder="Tape here to search ">
-                    <span class="bg-primary p-2 rounded-5"><i class="fa fa-search" style="color: #fff;"></i></span>
-                </div>
-                <p class="fw-bold mt-4">TOP PODCASTERS</p>
-                <div class="d-flex align-items-center mb-3 justify-content-between">
+                    <span class="bg-primary px-2 py-1 rounded-5"><i class="fa fa-search" style="color: #fff;"></i></span>
+                </form>
+                <p class="fw-bold my-4">TOP PODCASTERS</p>
+                <div class="d-flex align-items-center mb-4 justify-content-evenly">
                     <div class="col-3">
                         <img src="./img/style4.jpg" alt="img" class="img-fluid rounded-5 w-75 h-75">
                     </div>
@@ -281,7 +286,7 @@
                     </div>
                 </div>
 
-                <div class="d-flex align-items-center my-3 justify-content-between">
+                <div class="d-flex align-items-center my-4 justify-content-evenly">
                     <div class="col-3">
                         <img src="./img/style4.jpg" alt="img" class="img-fluid rounded-5 w-75 h-75">
                     </div>
@@ -294,7 +299,7 @@
                     </div>
                 </div>
 
-                <div class="d-flex align-items-center my-3 justify-content-between">
+                <div class="d-flex align-items-center my-4 justify-content-evenly">
                     <div class="col-3">
                         <img src="./img/style4.jpg" alt="img" class="img-fluid rounded-5 w-75 h-75">
                     </div>
@@ -307,7 +312,7 @@
                     </div>
                 </div>
 
-                <div class="card mt-4">
+                <div class="card mt-5">
                     <div class="card-body bg-dark text-light rounded ">
                         <div class="d-flex justify-content-between">
                             <p>Player</p>
@@ -317,14 +322,18 @@
                             <img src="./img/Jumelle.jpg" alt="img" class="img-fluid w-25 rounded-5">
                             <p class="fw-semibold mt-3">Employee Transfert</p>
                             <p class="text-secondary">Something is written here</p>
-                            <div class="d-flex align-items-center">
-                                <p class="text-secondary p">09:25</p>
-                                <div class="prgs">
+                            <div class="d-flex">
+                                <div>
+                                    <p class="text-secondary p">09:25</p>
+                                </div>
+                                <div class="prgs mt-2">
                                     <div class="prgss">
                                         <span class="prg"></span>
                                     </div>
                                 </div>
-                                <p class="text-secondary p">45:29</p>
+                                <div>
+                                    <p class="text-secondary p">45:29</p>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -333,7 +342,7 @@
                             <div><i class="fa fa-play"></i></div>
                             <div><i class="fa fa-play"></i></div>
                             <div>
-                                <div class="bg-light px-2 rounded-5 py-2 ">
+                                <div class="bg-light px-3 rounded-5 py-2 ">
                                     <i class="fa fa-play text-primary"></i>
                                 </div>
                             </div>
