--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
             <div>
                 <div class="mt-3">
                     <p class="fw-bold">RECENTLY PLAYED</p>
-                    <div class="d-flex media gap-3">
+                    <div class="d-flex align-items-center justify-content-center media gap-3">
                         <div class="col">
                             <img src="./img/team2.jpg" alt="" class="img-fluid rounded-3">
                             <div>
